Throw exception if lifecycle init fails